--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: black;
-    position:sticky;
+    position:relative;
     top: 0;
    
 }
