--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 * {
     margin: 0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #151515;
+   
 }
 
 .navbar {
     width: 100%;
-    height: 50px;
-    background-color: black;
-    position:sticky;
-    top: 0;
-   
+    height: 80px;
+    background-color: none;
 }
+
 .navbar-container{
     display: flex;
     align-items: center;
@@ -31,12 +31,7 @@ body {
 .logo{
     
     font-size:30px;
-    color:rgb(162, 101, 220) ;
-}
-
-.menu-container{
-    flex:6;
-
+    color:#E9BD43 ;
 }
 .menu-list{
     display:flex;
@@ -53,15 +48,15 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    background-color: rgb(162, 101, 220);
-    color: white;
-    border: 2px solid rgb(162, 101, 220);
+    background-color: #E9BD43;
+    color: #000;
+    border: 2px solid #E9BD43;
     border-radius: 25px;
     transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: rgb(162, 101, 220);
+    background-color: #E9BD43;
 }
 
 .sidebar{
@@ -84,15 +79,12 @@ button:hover {
 }
 
 .container{
-    background-color: #151515;
-    height: calc(100vh - 50px);
+    background-color: none;
     color: white;
+    min-height: 100vh ;
+    padding: 10px;
 }
 
-.content-container{
-    margin-left: 50px;
-
-}
 
 .featured-content{
     height: 50vh;
@@ -110,7 +102,6 @@ button:hover {
     margin: 30px 0;
     font-size: small;
 }
-
 .featured-button{
     background-color: darkviolet;
     color: white;
@@ -119,10 +110,6 @@ button:hover {
     border: none;
     outline: none;
     font-weight: bold;
-}
-
-.movie-list-container{
-    padding: 0 20px;
 }
 .movie-list{
     display: flex;
@@ -153,6 +140,9 @@ button:hover {
     margin: 0 30px;
     opacity: 0.5;
 }
+.movie-list-title{
+    color: #E9BD43;
+}
 
 .movie-list-item:hover .movie-list-item-title,
 .movie-list-item:hover .movie-list-item-desc,
@@ -170,7 +160,7 @@ button:hover {
 
 .movie-list-item-title{
     background-color: whitesmoke;
-    color: #333;
+    color: #E9BD43;;
     padding: 0 10px;
     font-size: 20px;
     font-weight: bold;
@@ -225,24 +215,6 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #151515;
 }
-
-.navbar {
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    position:relative;
-    top: 0;
-   
-}
-.navbar-container{
-    display: flex;
-    align-items: center;
-    padding: 0 50px;
-    height:100%;
-    color:white;
-    font-family: 'Sen',sans-serif;
-}
-
 .logo-container{
     flex:1;
 
@@ -250,12 +222,7 @@ body {
 .logo{
     
     font-size:30px;
-    color:rgb(162, 101, 220) ;
-}
-
-.menu-container{
-    flex:6;
-
+    color:#E9BD43 ;
 }
 .menu-list{
     display:flex;
@@ -272,15 +239,15 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    background-color: rgb(162, 101, 220);
+    background-color: #E9BD43;
     color: white;
-    border: 2px solid rgb(162, 101, 220);
+    border: 2px solid #E9BD43;
     border-radius: 25px;
     transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: rgb(162, 101, 220);
+    background-color: #E9BD43;
 }
 
 .sidebar{
@@ -300,17 +267,6 @@ button:hover {
     color: white;
     font-size: 20px;
     margin-bottom: 40px;
-}
-
-.container{
-    background-color: #151515;
-    height: calc(100vh - 50px);
-    color: white;
-}
-
-.content-container{
-    margin-left: 50px;
-
 }
 
 .featured-content{
@@ -341,7 +297,7 @@ button:hover {
 }
 
 .movie-list-container{
-    padding: 0 20px;
+    padding: 0 0px;
 }
 .movie-list{
     display: flex;
@@ -437,4 +393,95 @@ button:hover {
     cursor: pointer;
 }
 
+.menu-list{
+    list-style-type: none;
+}
+.menu-list-item > a{
+    text-decoration: none;
+    color: white;
+}
 
+.card {
+    width: 200px;
+    height: 250px;
+    margin: 10px;
+    overflow: hidden;
+    border-radius: 3px;
+    position: relative;
+    background: #444;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.details {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    text-align: left;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card:hover .details {
+    opacity: 1;
+}
+
+.details h3 {
+    font-size: 16px;
+    margin: 0 0 5px;
+}
+
+.details p {
+    font-size: 14px;
+    margin: 0;
+}
+
+.play-icon {
+    font-size: 24px;
+    color: #ffd500;
+    cursor: pointer;
+}
+.series-list-container{
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px; 
+    margin-right: 50px;
+    margin-left: 0px;
+}
+
+.series-list-wrapper{
+    position: relative;
+    overflow: hidden;
+}
+.series-list{
+    margin-right: 10px;
+    position: relative;
+    transition:all 1s ease-in-out;
+    display: flex;
+    align-items: center;
+    height: 300px;
+}
+.series-list-title{
+    margin-right: 900px;
+    color:whitesmoke;
+    font-size: 25px;
+    font-weight: inherit;
+    top: 10%;
+    left: 50px; 
+}
