--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ button:hover {
     right: 0;
     padding: 10px;
     text-align: left;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    background: rgb(31, 29, 29);
     opacity: 0;
     transition: 0.3s;
 }
