--- a/style.css
+++ b/style.css
@@ -86,31 +86,11 @@ button:hover {
 }
 
 
-.featured-content{
-    height: 50vh;
-    padding: 50px;
+.w{
+    height: 90vh;
+    background-image: url(img/Picture2.png);
 }
 
-.featured-title{
-    width: 350px;
-    
-}
-
-.featured-desc{
-    width: 500px;
-    color: lightgray;
-    margin: 30px 0;
-    font-size: small;
-}
-.featured-button{
-    background-color: darkviolet;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-weight: bold;
-}
 .movie-list{
     display: flex;
     align-items: center;
@@ -205,7 +185,7 @@ button:hover {
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #151515;
+    background-color: #131111;
 }
 .logo-container{
     flex:1;
@@ -245,7 +225,7 @@ button:hover {
 .sidebar{
     width:50px;
     height:100%;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     position:fixed;
     top:0;
     display: flex;
