--- a/style.css
+++ b/style.css
@@ -551,3 +551,34 @@ button:hover {
        position: absolute;
        cursor: grab;
     }
+    .scroll-bar {
+        height: auto;
+        width: auto;
+        margin: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
+        max-width: 100%;
+      }
+      
+      ::-webkit-scrollbar-track {
+        border: 5px solid #2c2f30;
+        background-color: blueviolet;
+      }
+      
+      ::-webkit-scrollbar-thumb:hover {
+        background-color: blueviolet !important;
+      }
+      
+      ::-webkit-scrollbar-track:hover {
+        background-color: white;
+      }
+      
+      ::-webkit-scrollbar {
+        width: 15px;
+        background-color: #2c2f30;
+      }
+      
+      ::-webkit-scrollbar-thumb {
+        background-color: black;
+        border-radius: 10px;
+      }
