--- a/style.css
+++ b/style.css
@@ -477,6 +477,7 @@ button:hover {
     .footer-middle-list-item{
     list-style:none;
     list-style-type: disc;
+    color:white;
     font-size:15px;
     font-family:'Roboto';
     margin:5px 0px 0px 15px;
