--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ button:hover {
 }
 
 .details {
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
@@ -618,4 +618,81 @@ button:hover {
         background-color: black;
         border-radius: 10px;
       }
-     
+      #pop-up-wrapper {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .popup-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .pop-up-box {
+            background: #431e4e;
+            max-width: 400px;
+            height: 425px;
+            width: 100%;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(255, 255, 255,0.7);
+            position: absolute;
+            font-family: 'Open Sans', sans-serif;
+            z-index: 1000;
+        }
+
+        .pop-up-exit-button {
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 18px;
+            color: #fff;
+        }
+
+        .pop-up-text-box {
+            color: #fff;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .subscription-form {
+            max-width: 400px;
+            margin: 20px auto;
+            padding: 20px;
+            border-radius: 8px;
+            background: #431e4e;
+        }
+
+        label, h2 {
+            color: #fff;
+            margin-bottom: 10px;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+            border: 1px solid #fff;
+            border-radius: 4px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+        }
+
+        button {
+            background-color: #8b5bbe;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
