--- a/sub.css
+++ b/sub.css
@@ -2,6 +2,7 @@
     display: none;
     flex-direction: column;
     align-items: center;
+    z-index: 1000;
 }
 
 .popup-overlay {
@@ -14,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .pop-up-box {
@@ -36,12 +38,16 @@
     right: 10px;
     font-size: 18px;
     color: #fff;
+    z-index: 1000;
+
 }
 
 .pop-up-text-box {
     color: #fff;
     text-align: center;
     margin-bottom: 20px;
+    z-index: 1000;
+
 }
 
 .subscription-form {
@@ -50,11 +56,15 @@
     padding: 20px;
     border-radius: 8px;
     background: #431e4e;
+    z-index: 1000;
+
 }
 
 label, h2 {
     color: #fff;
     margin-bottom: 10px;
+    z-index: 1000;
+
 }
 
 input {
@@ -66,6 +76,8 @@ input {
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.1);
     color: #fff;
+    z-index: 1000;
+
 }
 
 button {
@@ -75,4 +87,6 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    z-index: 1000;
+
 }
