--- a/style.css
+++ b/style.css
@@ -566,7 +566,8 @@ button:hover {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url(img/w1.PNG);
+        background-image: url(img/w1.1.PNG);
+        width: 100%;
         height: 60vh;
         margin: 0;
         
@@ -588,12 +589,7 @@ button:hover {
         font-size: small;
         cursor: pointer;
     }
-    .drag-item {
-       width: 70px;
-       height: auto;
-       position: absolute;
-       cursor: grab;
-    }
+    
     .scroll-bar {
         height: auto;
         width: auto;
